src/objects/LocalOppApprovalProcessCancelApprover__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SF-1781. By default Approval Processes only support email notifications, so when a Local Approval Process needs Cancellation approval, the OpportunityTrigger generates a notification task and assigns it to appropriate Cancellation representative (currently Naomi Carlson as of 12/21/2015). The OpportunityTrigger uses the Full Name + Email specified in this custom setting to query for the User ID record.</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Local Opp Approval Process - Cancel Appr</label>
</CustomObject>